--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0",
     "@11ty/eleventy-navigation": "^0.3.2",
+    "@11ty/eleventy-plugin-rss": "^1.1.2",
     "alpinejs": "^3.7.0",
     "html-minifier": "^4.0.0",
+    "luxon": "^2.3.0",
+    "markdown-it": "^12.3.2",
+    "markdown-it-attrs": "^4.1.3",
     "tailwindcss": "^3.0.0"
   }
 }
