--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "html-minifier": "^4.0.0",
     "luxon": "^2.3.0",
     "markdown-it": "^12.3.2",
+    "markdown-it-anchor": "^8.4.1",
     "markdown-it-attrs": "^4.1.3",
+    "string": "^3.3.3",
     "tailwindcss": "^3.0.0"
   }
 }
